--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  background-color: #1e1e2f;
+  overflow-x: hidden;
+}
