few changes done with respect to security and added roles to the user

--- a/my-app/src/Pages/ManageProject.css
+++ b/my-app/src/Pages/ManageProject.css
@@ -20,8 +20,9 @@
 .projects-table {
   width: 100%;
   border-collapse: collapse;
-  background-color: #377edb;
+  background-color: #346fbd;
   border-radius: 8px;
+  color:white;
   overflow: hidden;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
