--- a/my-app/src/Pages/ManageProject.css
+++ b/my-app/src/Pages/ManageProject.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
+  border-radius: 10px;
 }
 
 .create-btn {
@@ -20,9 +21,9 @@
 .projects-table {
   width: 100%;
   border-collapse: collapse;
-  background-color: #346fbd;
+   background: #e5ebe6;
   border-radius: 8px;
-  color:white;
+  color:black;
   overflow: hidden;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
@@ -32,6 +33,9 @@
   padding: 12px;
   text-align: left;
   border-bottom: 1px solid #eee;
+}
+.projects-table th{
+   background-color: #2875e7;
 }
 
 .status-tag {
