--- a/my-app/src/Register_and_login/Home.css
+++ b/my-app/src/Register_and_login/Home.css
@@ -1,5 +1,5 @@
 .home-container {
-  margin-left: 100px;
+  margin-left: 20%;
   margin-top: 60px;
   padding: 2rem;
   transition: margin-left 0.3s ease;
