changed back buttons and added view task based on sprintid

--- a/my-app/src/Features/FeatureList.css
+++ b/my-app/src/Features/FeatureList.css
@@ -15,7 +15,7 @@
 }
 
 .create-feature-btn {
-  background-color: #1976d2;
+  background-color: #21e06a;
   color: white;
   border: none;
   padding: 10px 14px;
