--- a/my-app/src/Task/TaskList.css
+++ b/my-app/src/Task/TaskList.css
@@ -26,7 +26,7 @@
 }
 
 .create-task-btn {
-  background-color: #1976d2;
+  background-color: #5ec423;
   color: white;
   border: none;
   padding: 10px 14px;
