--- a/my-app/src/sprint/ManageSprints.css
+++ b/my-app/src/sprint/ManageSprints.css
@@ -38,7 +38,7 @@
 }
 
 .sprint-table th, .sprint-table td {
-  border: 1px solid #317ee2;
+  border: 1px solid white;
   padding: 10px;
   text-align: center;
 }
